# myProjectForJenkins-fetchContent

./: CMakeLists.txt
include/: myC.h  myD.h
src/: myC.cpp  myD.cpp
tests/: testMyC.cpp  testMyD.cpp
